--- a/genai/translation/glossary/request_llm.json
+++ b/genai/translation/glossary/request_llm.json
@@ -6,6 +6,6 @@
   "glossaryConfig": {
     "glossary": "projects/979398597045/locations/us-central1/glossaries/aligame-glossary",
     "ignoreCase": true,
-    "contextual_translation_enabled": false
+    "contextual_translation_enabled": true
   }
 }
