--- a/genai/translation/glossary/request_llm_bad_case.json
+++ b/genai/translation/glossary/request_llm_bad_case.json
@@ -7,6 +7,6 @@
   "glossaryConfig": {
     "glossary": "projects/979398597045/locations/us-central1/glossaries/aligame-glossary",
     "ignoreCase": true,
-    "contextual_translation_enabled": true
+    "contextual_translation_enabled": false
   }
 }
